package pp;

import "pp.common.proto";

message EncryptReq {
  optional string pubkey = 1;
  optional bytes nonce = 2;
  optional bytes encryptdata = 3;
}

message EncryptRes {
  required Result result = 1;

  optional bytes nonce = 10;
  optional bytes encryptdata = 20;
}
